# mattock-ai-contest

./: .gitignore  board.py  bot.py  bot2.py  bot3.py  display.py  finished_bot.py  game.py  pyproject.toml  random_bot.py  test_game.py
