[tool.poetry]
name = "ai-contest"
version = "0.1.0"
description = ""
authors = ["El Kaplan <3373930+ejkaplan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
numpy = "^2.2.2"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
